tests/res/functions/error_not_callable.say
say x = 5;
x(); // error: 5 is not callable
